# Trivela

./: .gitleaks.toml  CONTRIBUTING.md  Cargo.toml  ISSUES_316_318_319_320_IMPLEMENTATION.md  PROPOSED_ISSUES.md  PR_DESCRIPTION.md  README.md  compose.yaml  package-lock.json  package.json
.github/workflows/: backend-ci.yml  ci-performance.yml  codeql.yml  contract-fuzzing.yml  contracts-ci.yml  docs.yml  format-check.yml  frontend-ci.yml  load-test.yml  observability-ci.yml  openapi-codegen.yml  python-sdk-ci.yml  release-bindings.yml  repo-sanity.yml  secrets-scan.yml  security-headers-check.yml  security-headers.yml  testnet-integration.yml  visual-regression.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  openapi.yaml  package.json
backend/src/: batchCampaigns.js  index.js  index.test.js  rpcPool.test.js
contracts/: FUZZING.md
contracts/campaign/: Cargo.toml
contracts/integration/: Cargo.toml
contracts/nullifiers/: Cargo.toml
contracts/rewards/: Cargo.toml
docs/: ANALYTICS_TAXONOMY.md  CONTRACTS_API.md  FORMAL_VERIFICATION.md  GITHUB_PAGES.md  MAINNET_CHECKLIST.md  MAINNET_DEPLOY.md  RUNBOOK.md  SECURITY.md  WEBSOCKET.md  upgradeability.md
frontend/: .env.example  .prettierignore  README.md  eslint.config.js  index.html  package.json  vercel.json  vite.config.js  vitest.config.js
frontend/.storybook/: main.js  preview.js
frontend/public/: embed.js
frontend/src/: AdminCampaigns.jsx  App.jsx  CampaignDetail.css  (+16 more)
k8s/: cronjob-db-backup.yaml
scripts/: build-bindings.js  check-bundle-size.mjs  deploy-mainnet.sh  deploy-testnet.sh
(+907 files in other folders)
